# hw5

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml  tests.yaml
src/hw5/: prime_num.py
tests/: test_prime_num.py
