[project]
name = "HW5"
version = "0.1.0"
description = "The homework 5"
authors = [
    {name = "MilanaBin", email = "vgpv.milana@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "ruff>=0.6.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
show-fixes = true
line-length = 120